[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antispeedbump"
version = "1.0.1"
authors = [{ name = "Yusuf Berkay Girgin" }]
description = "Antispeedbump Instagram Bot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.28.1",
  "helium==3.0.9",
  "click==8.1.3",
  "sqlalchemy==1.4.44"
]

[project.urls]
"Homepage" = "https://github.com/OverseaSoftCommunity/antispeedbump"
